Do not re-register dislay info if exists

UpdateInternalDisplay should register the display info
only if
1) no internal display info  is registered. (it'll be
  treated as new display)
2) it's disconnected

BUG=774383
TEST=covered by unit test. manually tested on kevin.

Change-Id: Ifdf74ad7e61a0d5ffa617e0a72622e2ddb9bbebd
Reviewed-on: https://chromium-review.googlesource.com/726262
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510235}
Former-commit-id: ca1309e1130def3f01b093f53e083258ea214e78